--- a/style.css
+++ b/style.css
@@ -39,3 +39,43 @@ main {
     border-radius: 2.5rem 2.5rem 0 0;
     max-width: 92rem;
 }
+
+.info {
+    padding-inline: .8rem;
+
+    div {
+        margin-bottom: 3.2rem;
+    }
+
+    strong {
+        color: var(--greyish-turquoise);
+        display: block;
+        margin-bottom: .6rem;
+    }
+
+    .input-box {
+        background: var(--squeeze);
+        padding: .6rem 1.8rem;
+        display: flex;
+        align-items: center;
+        border-radius: .5rem;
+
+        input {
+            font-size: 2.4rem;
+            border: none;
+            background: transparent;
+            text-align: right;
+            width: 100%;
+            font-weight: 700;
+            outline: none;
+            color: var(--sherpa-blue);
+
+            &::placeholder {
+                color: var(--sherpa-blue);
+                opacity: 0.35;
+            }
+        }
+
+    }
+
+}
