--- a/style.css
+++ b/style.css
@@ -123,3 +123,46 @@ main {
         }
     }
 }
+
+.results {
+    background: var(--sherpa-blue);
+    border-radius: 1.5rem;
+    padding: 4rem 2.4rem 2.4rem;
+
+    .amount,
+    .total {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 2.4rem;
+
+        p {
+            color: var(--white);
+            font-weight: 700;
+            font-size: 1.3rem;
+
+            span {
+                color: var(--regent-grey);
+            }
+        }
+
+        strong {
+            color: var(--topaz);
+            font-size: 3.2rem;
+        }
+
+    }
+
+    button {
+        padding-block: .9rem;
+        width: 100%;
+        border: none;
+        background: var(--topaz);
+        border-radius: .5rem;
+        text-transform: uppercase;
+        font-size: 2rem;
+        color: var(--sherpa-blue);
+        font-weight: 700;
+    }
+
+}
