--- a/style.css
+++ b/style.css
@@ -166,3 +166,56 @@ main {
     }
 
 }
+
+@media(min-width: 920px) {
+    main{
+        display: flex;
+        max-width: 92rem;
+        margin-inline: auto;
+        border-radius: 2.5rem;
+        gap: 4.8rem;
+        padding: 4.8rem;
+    }
+
+    section{
+        width: 100%;
+    }
+
+    .info .tip div {
+        grid-template-columns: repeat(3, 1fr);
+
+        button:hover {
+            background: var(--topaz);
+            cursor: pointer;
+            transition: .5s;
+        }
+    }
+
+    input::-webkit-inner-spin-button,
+    input::-webkit-outer-spin-button {
+        display: none;
+    }
+
+    .results {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 5.6rem 4rem 4rem;
+
+        .amount p,
+        .total p {
+            font-size: 1.6rem;
+        }
+
+        .amount strong,
+        .total strong {
+            font-size: 4.8rem; 
+        }
+
+        button:hover {
+            background: var(--water-leaf);
+            cursor: pointer;
+            transition: .3s;
+        }
+    }
+}
