inicio do javascript

--- a/style.css
+++ b/style.css
@@ -98,7 +98,10 @@ main {
                 border-radius: .5rem;
                 padding-block: .6rem;
                 background: var(--sherpa-blue);
-    
+            }
+
+            .button-selected{
+                background: var(--topaz);
             }
 
             input {
