--- a/style.css
+++ b/style.css
@@ -170,6 +170,11 @@ main {
 
 }
 
+input::-webkit-inner-spin-button, 
+input::-webkit-outer-spin-button {
+    display: none;
+}
+
 @media(min-width: 920px) {
     main{
         display: flex;
@@ -188,15 +193,10 @@ main {
         grid-template-columns: repeat(3, 1fr);
 
         button:hover {
-            background: var(--topaz);
+            background: var(--water-leaf);
             cursor: pointer;
-            transition: .5s;
+            transition: .3s;
         }
-    }
-
-    input::-webkit-inner-spin-button,
-    input::-webkit-outer-spin-button {
-        display: none;
     }
 
     .results {
